# FerrisSearch

./: .gitignore  Cargo.toml  LICENSE  README.md  dev_cluster.sh  dev_cluster_release.sh
.github/: copilot-instructions.md
.github/instructions/: api.instructions.md  cluster.instructions.md  consensus.instructions.md  engine.instructions.md  hybrid.instructions.md  node.instructions.md  replication.instructions.md  search.instructions.md  security.instructions.md  shard.instructions.md  tantivy-optimizations.md  testing.instructions.md  transport.instructions.md  wal.instructions.md
.github/workflows/: ci.yml
config/: ferrissearch.yml
docs/: adaptive-top-k-auto-mode.md  architecture.md  benchmarks.md  blog-draft.md  dynamic-settings.md  explain-analyze-output.md  medium-nyc-taxis-100m.md  nyc-taxi-hybrid-benchmark.md  nyc-taxi-story.md  remote-store-one-pager.md  remote-store-rustfs-live-runbook.md  remote-store-split-pruning.md
docs/releases/: 0.2.0.md
proto/: transport.proto
scripts/: azure_bench_setup.sh  ci-local.sh  hackernews_queries.sh  ingest_1gb_vectors.py  ingest_hackernews.py  ingest_nyc_taxis.py  load_nyc_taxis.sh  load_nyc_taxis_100m.sh  load_nyc_taxis_20m_bench.sh  nyc_taxi_hybrid_benchmark.sh  nyc_taxi_queries.sh  perf_stored_fields.py  remote_store_rustfs_smoke.sh  restart_regression.py  rustfs_dev.sh  sql_1gb.py  sql_showcase.py
src/: cli.rs  lib.rs  main.rs  tasks.rs  worker.rs
src/api/: cat.rs  cluster.rs  index.rs  mod.rs  search.rs  tasks.rs
src/api/index/: bulk.rs  maintenance.rs  mod.rs  tests.rs
src/api/search/: canonicalization.rs  mod.rs  tests.rs
src/cluster/: manager.rs  mod.rs  settings.rs  state.rs
src/common/: date.rs  mod.rs  sql_parse.rs
src/config/: mod.rs
src/consensus/: disk_store.rs  mod.rs  network.rs  state_machine.rs  store.rs  types.rs
src/engine/: column_cache.rs  composite.rs  mod.rs  remote_store.rs  routing.rs  tantivy.rs  vector.rs
src/hybrid/: arrow_bridge.rs  column_store.rs  datafusion_exec.rs  merge.rs  mod.rs  planner.rs
src/metrics/: mod.rs
src/node/: lifecycle.rs  mod.rs  reconciliation.rs  tests.rs
src/replication/: mod.rs
src/search/: mod.rs
src/security/: mod.rs
src/shard/: mod.rs
src/storage/: mod.rs
src/transport/: client.rs  mod.rs  server.rs
src/transport/server/: conversions.rs  mod.rs  tests.rs
src/wal/: mod.rs
tests/: consensus_integration.rs  remote_store_s3_integration.rs  replication_integration.rs  rest_api_integration.rs  restart_regression.rs  sql_correctness.rs
tests/slt/: basic.slt  group_by.slt  predicates.slt  select.slt
