[package]
name = "ferrissearch"
version = "0.2.0"
edition = "2024"
default-run = "ferrissearch"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
bincode-next = { version = "3.0.0-rc.5", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
colored = "3"
comfy-table = "7"
config = "0.15.21"
datafusion = "53"
futures = "0.3.32"
moka = { version = "0.12", features = ["sync"] }
murmur3 = "0.5.2"
openraft = { version = "0.10.0-alpha.17", features = ["serde", "tokio-rt"] }
prometheus = "0.14"
prost = "0.13"
rayon = "1.10"
redb = "3"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
rustyline = "15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sqlparser = "0.61"
tantivy = "0.25.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tonic = "0.13"
tonic-types = { version = "0.13", optional = true }
tokio-rustls = { version = "0.26", optional = true }
rustls-pemfile = { version = "2", optional = true }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
usearch = "2.24.0"
tikv-jemallocator = "0.6.1"
uuid = { version = "1.22.0", features = ["v4", "serde"] }

[features]
default = []
transport-tls = ["dep:tonic-types", "dep:tokio-rustls", "dep:rustls-pemfile", "tonic/tls-ring"]

[build-dependencies]
tonic-build = "0.13"

[[bin]]
name = "ferrissearch"
path = "src/main.rs"

[[bin]]
name = "ferris-cli"
path = "src/cli.rs"

[dev-dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
sqllogictest = "0.29"
tempfile = "3"
tokio-stream = "0.1"
